Add Meeting Analyzier

--- a/MeetingSummarize/appsettings.json
+++ b/MeetingSummarize/appsettings.json
@@ -5,5 +5,18 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "connection_string"
+  },
+  "OpenAI": {
+    "ApiKey": "your_API_key"
+  },
+  "Mediasoup": {
+    "ServerUrl": "http://localhost:3001"
+  },
+  "GoogleCalendar": {
+    "ClientId": "",
+    "ClientSecret": ""
+  }
 }
